# EasyJsonCPP

./: .gitignore  CMakeLists.txt  README.md  designDocument.md  easy_config.json  infodata.json  install.sh
configs/: easy_config.json  infodata.json
include/: Brewfile  easyJsonCPP.hpp  easyjson.h  header.h  header.hpp  main.cpp
include/easyJson/: easyJsonCPP.hpp  header.hpp
src/: easyJsonCPP.cpp  easyjson.cpp
test/: CMakeLists.txt  UT_parseconfig.cpp  easyjsonmock.h  install.sh
test/src/: UT_easyJsonTest.cpp  UT_loadconfig.cpp  easyjsonmock.h  main.cpp
tester/: CMakeLists.txt  easy_config.json  infodata.json  install.sh  metadata.json
tester/include/: tester.h  tester.hpp
tester/src/: easyJsonCPP.cpp  main.cpp  tester.cpp
tester/test/: CMakeLists.txt
tester/test/src/: easyjsonmock.h  main.cpp
